roles/ocp4_workload_ocp_troubleshooting_workshop/files/workloads/04-networking/4.3-dns-failure/broken/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-4-3-frontend
  labels:
    app: lab-4-3-frontend
    demo.redhat.com/name: ocp-troubleshooting-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-4-3-frontend
  template:
    metadata:
      labels:
        app: lab-4-3-frontend
    spec:
      containers:
      - name: frontend
        image: quay.io/redhat-telco-adoption/nginx-unprivileged:latest
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
